# nexa-ai-core

./: Cargo.toml  index.html  styles.css
public/: rete-editor.js
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: reactive.rs  rete_canvas.rs
