[package]
name = "nexa-ai-core-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.108"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gloo-timers = { version = "0.3", features = ["futures"] }

[workspace]
members = ["src-tauri"]
