[package]
name = "nexa-ai-core-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = ["HtmlElement", "WebSocket", "MessageEvent", "ErrorEvent"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.108"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-console = "0.3.0"
gloo-net = "0.5.0"

[workspace]
members = ["src-tauri"]
