[package]
name = "nexa-ai-core"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nexa_ai_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-http = "2.3.0"
tauri-plugin-log = { version = "2.2.1", features = ["colored"] }
tauri-plugin-notification = "2.2.1"
tauri-plugin-os = "2.2.0"
tauri-plugin-persisted-scope = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-upload = "2.2.1"
tauri-plugin-websocket = "2.3.0"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4"
log = "0.4"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
sysinfo = "0.33.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.2.0"
tauri-plugin-window-state = "2.2.1"

